--- a/todos.html
+++ b/todos.html
@@ -14,6 +14,13 @@
             <input type="text" class="todoField" />
             <button class="addTodo">Add</button>
         </div>
+        <div>
+            search:
+            <input type="text" class="searchField" />
+        </div>
+        <div>
+            <button class="sortButton">sort</button>
+        </div>
         <hr />
         <ul class="todoList">
             <li>
